   This information is gathered from the environment variables HOSTNAME
   and HOSTTYPE (Unix), COMPUTERNAME, PROCESSOR_ARCHITECTURE, PROCESSOR_LEVEL
   (Windows) and the output of the system function uname(), if available.

 - LOG lost accuracy when applied to a complex number where the either the
   real or the imaginary part was much larger than the other one.

 - Building without GMP is again supported.

 - Bytecode functions can now be externalized in C compiled files.

 - (FUNCALL (LOAD-TIME-VALUE ...) ...) forced the evaluation of the argument to
   LOAD-TIME-VALUE. LOAD-TIME-VALUE is now implemented as a special operator
   and not as a macro.

 - Garbage collection statistics was broken for libraries other than the one
   shipped with ECL.

 - When COMPILE-FILE is provided a value of :OUTPUT-FILE, the file extension
   ".fas" was not automatically appended.

* Optimization and performance:

 - TYPEP now can be optimized if the type argument is a constant.

* System design:

 - We introduce a new kind of lisp objects, the stack frames. These are objects
   with dynamical extent, which work as adjustable arrays and are mainly used
   for collecting the arguments of a function, in MAP, MAPCAR, APPLY, FUNCALL,
   MULTIPLE-VALUE-CALL, etc.

 - On some platforms (intel/32bits) there exist hand-optimized assembly
   routines that implement APPLY in various forms (fixed # arguments, variable
   #, closures) They save about 40kb code in Mac OSX, for instance, and do not
   impact performance. This has to be activated with --enable-asmapply at
   configuration time (Still experimental)

 - ECL now offers the possibility to use conses which do not carry type
   information. These conses have a size of two words and lead to significantly
   faster code, as well as less memory consumption. The feature has to be
   activated manually using the configuration flag --enable-smallcons.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***