@@ -247,6 +247,8 @@ ECL 0.9k:
 
  - TYPEP now can be optimized if the type argument is a constant.
 
+ - ECL's bytecode interpreter now uses indirect threading.
+
 * System design:
 
  - We introduce a new kind of lisp objects, the stack frames. These are objects
